--- a/green_list.html
+++ b/green_list.html
@@ -49,6 +49,7 @@
         #c1, #c2, #c3 {transition: .3s all;}
         #c1:hover, #c2:hover, #c3:hover {transform: scale(1.05);}
         
+        .inv {overflow: hidden}
     </style>
 
     <script>
